# CmakeVersionDemo

./: CMakeLists.txt  README.md  main.cc
app/: CMakeLists.txt  main.cc
buildconfig/: CMakeLists.txt  version.cc
buildconfig/include/public/CmakeVersionDemo/: version.h
cmake/: SetupCxxCompilerWarnings.cmake
config/: CMakeLists.txt  version.cc  version_constants.cc.in
config/include/CmakeVersionDemo/: buildconfig.h  version.h
lib/: CMakeLists.txt  buildconfig.cc  configure_file.cc.in  version.cc
lib/include/CmakeVersionDemo/: buildconfig.h
